--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -111,16 +111,15 @@
 					</li>
 					
 					<li>
-						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor"
 						<i class="ti-user"></i>
 						</a>
 					</li>
 					<li>
-						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee"
 						<i class="ti-user"></i>
 						</a>
 					</li>
-                
                 
                 </ul>
             </div>
@@ -260,29 +259,6 @@
                 </div><!-- end media -->
                 <% }) %>
       
-            <div class="pager pt-30px px-3">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination generic-pagination pr-1">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true"><i class="la la-arrow-left"></i></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                        </li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true"><i class="la la-arrow-right"></i></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <p class="fs-13 pt-2">Showing 1-4 results of 50 questions</p>
-            </div>
         </div><!-- end question-main-bar -->
     </div><!-- end container -->
 </section><!-- end question-area -->
